# ros2_ws

src/runs/: CMakeLists.txt  package.xml  setup.py
src/runs/launch/: gazebo_launch.py  vehicle_launch.py
src/runs/src/: lidar_node.py  motor_control.py
